--- a/views/home.html
+++ b/views/home.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	{{ template "base" }}
 </head>
 <body>
-		<h1>Hi</h1>
 </body>
 </html>
