feat: finish working basic auth system

--- a/views/base.html
+++ b/views/base.html
@@ -22,4 +22,9 @@
 				font-feature-settings: "cv03", "cv04", "cv11";
 			}
 		</style>
+		<body>
+				<script src="/static/js/demo-theme.min.js?1692870487"></script>
+				<script src="/static/js/tabler.min.js?1692870487" defer></script>
+				<script src="/static/js/demo.min.js?1692870487" defer></script>
+		</body>
 {{ end }}
