--- a/views/confirm-password.html
+++ b/views/confirm-password.html
@@ -1,69 +1,44 @@
-<!doctype html>
-<!--
-* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
-* @version 1.0.0-beta20
-* @link https://tabler.io
-* Copyright 2018-2023 The Tabler Authors
-* Copyright 2018-2023 codecalm.net Paweł Kuna
-* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
--->
-<html lang="en" id="confirm" hx-swap-oob="true">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Sign in - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
-		{{ template "base" }}
-  </head>
-  <body  class=" d-flex flex-column">
-    <script src="/static/js/demo-theme.min.js?1692870487"></script>
-    <div class="page page-center">
-      <div class="container container-tight py-4">
-        <div class="text-center mb-4">
-          <a href="." class="navbar-brand navbar-brand-autodark">
-            <img src="/static/img/logo.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
-          </a>
-        </div>
+<div id="form" class="page page-center" hx-swap-oob="true" hx-swap="outerHTML" >
+		<div class="container container-tight py-4">
+				<div class="text-center mb-4">
+						<a href="." class="navbar-brand navbar-brand-autodark">
+								<img src="/static/img/logo.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
+						</a>
+				</div>
 				{{ template "errors" }}
-        <div class="card card-md">
-          <div class="card-body">
-            <h2 class="h2 text-center mb-4">Reset your password</h2>
-            <form hx-post="/api/auth/signin" hx-target="#error-container" hx-swap="innerHTML" autocomplete="off" novalidate>
-              <div class="mb-2">
-                <label class="form-label">
-                  Password
-                </label>
-                <div class="input-group input-group-flat">
-                  <input type="password" name="password1" class="form-control"  placeholder="Your password"  autocomplete="off">
-                  <span class="input-group-text">
-                    <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
-                      <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
-                    </a>
-                  </span>
-                </div>
-                <label class="form-label">
-                  Confirm password
-                </label>
-                <div class="input-group input-group-flat">
-                  <input type="password" name="password2" class="form-control"  placeholder="Your password"  autocomplete="off">
-                  <span class="input-group-text">
-                    <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
-                      <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
-                    </a>
-                  </span>
-                </div>
-              </div>
-              <div class="form-footer">
-                <button type="submit" class="btn btn-primary w-100">Reset password</button>
-              </div>
-            </form>
-          </div>
-      </div>
-    </div>
-    <!-- Libs JS -->
-    <!-- Tabler Core -->
-    <script src="/static/js/tabler.min.js?1692870487" defer></script>
-    <script src="/static/js/demo.min.js?1692870487" defer></script>
-  </body>
-</html>
-
+				<div class="card card-md">
+						<div class="card-body">
+								<h2 class="h2 text-center mb-4">Reset your password</h2>
+								<form hx-post="/api/auth/reset-password" hx-target="#error-container" hx-swap="innerHTML" autocomplete="off" novalidate>
+										<input type="hidden" name="otp" value="{{.Otp}}">
+										<div class="mb-2">
+												<label class="form-label">
+														Password
+												</label>
+												<div class="input-group input-group-flat">
+														<input type="password" name="password1" class="form-control"  placeholder="Your password"  autocomplete="off">
+														<span class="input-group-text">
+																<a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
+																		<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
+																</a>
+														</span>
+												</div>
+												<label class="form-label">
+														Confirm password
+												</label>
+												<div class="input-group input-group-flat">
+														<input type="password" name="password2" class="form-control"  placeholder="Your password"  autocomplete="off">
+														<span class="input-group-text">
+																<a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
+																		<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
+																</a>
+														</span>
+												</div>
+										</div>
+										<div class="form-footer">
+												<button type="submit" class="btn btn-primary w-100">Reset password</button>
+										</div>
+								</form>
+						</div>
+				</div>
+		</div>
