--- a/views/errors.html
+++ b/views/errors.html
@@ -1,5 +1,21 @@
 {{ block "errors" . }}
 <div id="error-container">
+
+{{ if .Message }}
+<div class="alert alert-success alert-dismissible" role="alert">
+		<div class="d-flex">
+				<div>
+						<!-- Download SVG icon from http://tabler-icons.io/i/check -->
+						<svg xmlns="http://www.w3.org/2000/svg" class="icon alert-icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 12l5 5l10 -10" /></svg>
+				</div>
+				<div>
+						{{ .Message }}
+				</div>
+		</div>
+		<a class="btn-close" data-bs-dismiss="alert" aria-label="close"></a>
+</div>
+{{ end }}
+
 {{ if .Error }}
 <div class="alert alert-warning alert-dismissible alert-container" role="alert">
 		<div class="d-flex">
