--- a/views/signin.html
+++ b/views/signin.html
@@ -17,7 +17,7 @@
   </head>
   <body  class=" d-flex flex-column">
     <script src="/static/js/demo-theme.min.js?1692870487"></script>
-    <div class="page page-center">
+		<div id="form" class="page page-center" hx-swap-oob="true" hx-swap="outerHTML" >
       <div class="container container-tight py-4">
         <div class="text-center mb-4">
           <a href="." class="navbar-brand navbar-brand-autodark">
