--- a/views/signin.html
+++ b/views/signin.html
@@ -24,14 +24,14 @@
             <img src="/static/img/logo.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
           </a>
         </div>
-				{{ template "errors" }}
+				{{ template "errors" . }}
         <div class="card card-md">
           <div class="card-body">
             <h2 class="h2 text-center mb-4">Login to your account</h2>
-            <form hx-post="/api/auth/signin" hx-target="#error-container" hx-swap="innerHTML" autocomplete="off" novalidate>
+            <form hx-post="/api/auth/signin" hx-target="#error-container" hx-swap="innerHTML" autocomplete="off">
               <div class="mb-3">
                 <label class="form-label">Email address</label>
-                <input type="email" name="email" class="form-control" placeholder="your@email.com" autocomplete="off">
+                <input required type="email" name="email" class="form-control" placeholder="your@email.com" autocomplete="off">
               </div>
               <div class="mb-2">
                 <label class="form-label">
@@ -41,7 +41,7 @@
                   </span>
                 </label>
                 <div class="input-group input-group-flat">
-                  <input type="password" name="password" class="form-control"  placeholder="Your password"  autocomplete="off">
+                  <input type="password" name="password" class="form-control"  placeholder="Your password"  autocomplete="off" required >
                   <span class="input-group-text">
                     <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
                       <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
