--- a/views/signup-success.html
+++ b/views/signup-success.html
@@ -1,36 +1,6 @@
-<!doctype html>
-<!--
-* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
-* @version 1.0.0-beta20
-* @link https://tabler.io
-* Copyright 2018-2023 The Tabler Authors
-* Copyright 2018-2023 codecalm.net Paweł Kuna
-* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
--->
-<html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Sign in link - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
-    <!-- CSS files -->
-    <link href="/static/css/tabler.min.css?1692870487" rel="stylesheet"/>
-    <link href="/static/css/tabler-flags.min.css?1692870487" rel="stylesheet"/>
-    <link href="/static/css/tabler-payments.min.css?1692870487" rel="stylesheet"/>
-    <link href="/static/css/tabler-vendors.min.css?1692870487" rel="stylesheet"/>
-    <link href="/static/css/demo.min.css?1692870487" rel="stylesheet"/>
-		<script src="https://unpkg.com/htmx.org@2.0.1"></script>
-    <style>
-      @import url('https://rsms.me/inter/inter.css');
-      :root {
-      	--tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-      }
-      body {
-      	font-feature-settings: "cv03", "cv04", "cv11";
-      }
-    </style>
-  </head>
-  <body  class=" d-flex flex-column">
+{{ block "signup-success" . }}
+{{ if .Email }}
+  <body class="d-flex flex-column">
     <script src="/static/js/demo-theme.min.js?1692870487"></script>
     <div class="page page-center">
       <div class="container container-tight py-4">
@@ -43,7 +13,7 @@
           <div class="my-5">
             <h2 class="h1">Check your inbox</h2>
             <p class="fs-h3 text-secondary">
-						  We've sent you a magic link to <strong>{{ .Email }}</strong>.<br />
+						We've sent you a magic link to <strong>{{ .Email }}</strong>.<br />
               Please click the link to confirm your address.
             </p>
           </div>
@@ -54,10 +24,8 @@
         </div>
       </div>
     </div>
-    <!-- Libs JS -->
-    <!-- Tabler Core -->
-    <script src="/static/js/tabler.min.js?1692870487" defer></script>
-    <script src="/static/js/demo.min.js?1692870487" defer></script>
+    <script src="./dist/js/tabler.min.js?1692870487" defer></script>
+    <script src="./dist/js/demo.min.js?1692870487" defer></script>
   </body>
-</html>
-
+{{ end }}
+{{ end }}
