add validations and Retarget header for targeting elements via headers

--- a/views/forgot-password.html
+++ b/views/forgot-password.html
@@ -42,7 +42,7 @@
 						{{ end }}
 				</div>
 				{{ end }}
-        <form class="card card-md" hx-post="/api/auth/forgot-password" hx-target="body" autocomplete="off" novalidate>
+        <form class="card card-md" hx-post="/api/auth/forgot-password" hx-target="body" autocomplete="off">
           <div class="card-body">
             <h2 class="card-title text-center mb-4">Forgot password</h2>
             <p class="text-secondary mb-4">Enter your email address and your password will be reset and emailed to you.</p>
