--- a/views/signup.html
+++ b/views/signup.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Sign up - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
-
     <!-- Base files -->
 		{{ template "base" }}
   </head>
@@ -21,21 +20,21 @@
           </a>
         </div>
 
-				<form class="card card-md" hx-post="/api/auth/signup" hx-target="body" hx-swap="outerHTML" autocomplete="off" novalidate>
+				<form id="signup-form" class="card card-md" hx-post="/api/auth/signup" hx-target="body" hx-swap="outerHTML" autocomplete="off">
 						<div class="card-body">
 								<h2 class="card-title text-center mb-4">Create new account</h2>
             <div class="mb-3">
               <label class="form-label">Name</label>
-              <input name="name" type="text" class="form-control" placeholder="Enter name">
+              <input name="name" type="text" class="form-control" placeholder="Enter name" required>
             </div>
             <div class="mb-3">
               <label class="form-label">Email address</label>
-              <input name="email" type="email" class="form-control" placeholder="Enter email">
+              <input name="email" type="email" class="form-control" placeholder="Enter email" required>
             </div>
             <div class="mb-3">
               <label class="form-label">Password</label>
               <div class="input-group input-group-flat">
-                <input name="password" type="password" class="form-control"  placeholder="Password"  autocomplete="off">
+									<input name="password" type="password" class="form-control"  placeholder="Password" autocomplete="off" required>
                 <span class="input-group-text">
                   <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
@@ -45,7 +44,7 @@
             </div>
             <div class="mb-3">
               <label class="form-check">
-                <input type="checkbox" class="form-check-input"/>
+                <input type="checkbox" class="form-check-input" required/>
                 <span class="form-check-label">Agree the <a href="./terms-of-service.html" tabindex="-1">terms and policy</a>.</span>
               </label>
             </div>
