--- a/views/base.html
+++ b/views/base.html
@@ -13,7 +13,15 @@
 						z-index: 1050;
 						max-width: 300px;
 				}
-
+  .table-enhanced tbody td {
+    font-weight: 500;
+    font-size: 1rem;
+  }
+  .table-enhanced thead th {
+    font-weight: 600;
+    font-size: 1.05rem;
+    text-transform: uppercase;
+  }
 			@import url('https://rsms.me/inter/inter.css');
 			:root {
 				--tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
