--- a/views/projects.html
+++ b/views/projects.html
@@ -53,39 +53,65 @@
 										</div>
 								</div>
 						</div>
-
 				</form>
+
 				<div class="page">
 						<div class="page-wrapper">
 								<div class="page-body">
 										<div class="container-xl">
-												<div class="card">
-														<div class="card-body">
-																<div id="table-default" class="table-responsive">
-																		<table class="table">
-																				<thead>
-																						<tr>
-																								<th><button class="table-sort" data-sort="sort-name">Name</button></th>
-																								<th><button class="table-sort" data-sort="sort-score">Visibility</button></th>
-																						</tr>
-																				</thead>
-																				<tbody class="table-tbody">
-																						{{ range .Projects }}
-																						<tr>
-																								<td hx-on:click="window.location.href='/monitors/{{.ID.Value}}'" class="sort-name">{{ .Name }} </td>
-																								<td class="sort-name">{{ .Visibility }} </td>
-																						</tr>
-																						{{ end}}
-																				</tbody>
-																		</table>
+												{{ if eq (len .Projects) 0 }}
+												<div class="page-body">
+														<div class="container-xl d-flex flex-column justify-content-center">
+																<div class="empty">
+																		<div class="empty-img"><img src="/static/img/illustrations/undraw_printing_invoices_5r4r.svg" height="128" alt="">
+																		</div>
+																		<p class="empty-title">No projects found</p>
+																		<div class="empty-action">
+																				<a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-report"> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
+																						Create project
+																				</a>
+																		</div>
 																</div>
 														</div>
-														<a href="#" class="btn" data-bs-toggle="modal" data-bs-target="#modal-report">
-																Create project
-														</a>
+												</div>
+												{{ end }}
+												{{ if gt (len .Projects) 0 }}
+												<div class="row g-2 align-items-center">
+														<div class="col-auto ms-auto d-print-none">
+																<a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-report">
+																		<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
+																		Create project
+																</a>
+														</div>
+
+														<div class="card">
+																<div class="card-body">
+																		<div id="table-default" class="table-responsive">
+
+																				<table class="table table-vcenter card-table table-enhanced">
+																						<thead>
+																								<tr>
+																										<th><button class="table-sort" data-sort="sort-name">Name</button></th>
+																										<th><button class="table-sort" data-sort="sort-type">Visibility</button></th>
+																								</tr>
+																						</thead>
+																						<tbody class="table-tbody">
+																								{{ range .Projects }}
+																								<tr>
+																										<td class="sort-name">
+																												<a href="/monitors/{{.ID.Value }}">{{ .Name }}</a>
+																										</td>
+																										<td class="sort-city">{{ .Visibility }}</td>
+																								</tr>
+																								{{ end}}
+																						</tbody>
+																				</table>
+																		</div>
+																</div>
+																{{end}}
+														</div>
 												</div>
 										</div>
-								</div>
 								<footer class="footer footer-transparent d-print-none">
 										<div class="container-xl">
 												<div class="row text-center align-items-center flex-row-reverse">
@@ -142,4 +168,5 @@
 				</script>
 		</body>
 </html>
+
 
