--- a/views/monitors.html
+++ b/views/monitors.html
@@ -106,6 +106,7 @@
 																								<tr>
 																										<th><button class="table-sort" data-sort="sort-name">Name</button></th>
 																										<th><button class="table-sort" data-sort="sort-type">Status</button></th>
+																										<th><button class="table-sort" data-sort="sort-score">Ping url</button></th>
 																										<th><button class="table-sort" data-sort="sort-score">Last ping</button></th>
 																								</tr>
 																						</thead>
