--- a/views/monitors-list-block.html
+++ b/views/monitors-list-block.html
@@ -11,9 +11,15 @@
 {{ block "monitors-list-block" . }}
 <tr>
 		<td class="sort-name">
+				{{ if eq .Status "up" }}
+				<span class="badge bg-green ms-auto"></span>
+				{{ else }}
+				<span class="badge bg-red ms-auto"></span>
+				{{ end }}
 				<a href="/monitor/{{ .ID }}">{{ .Name }}</a>
 		</td>
 		<td class="sort-city">{{ .Status }}</td>
+
 		<td class="sort-city">{{ .PingUrl }}</td>
 		{{ if .LastPing.Value }}
 				<td class="sort-city">{{ .LastPing.Value }}</td>
