progress with monitor page, add polling to get events every N seconds

--- a/views/base.html
+++ b/views/base.html
@@ -139,8 +139,7 @@ font-feature-settings: "cv03", "cv04", "cv11";
 												</div>
 										</div>
 								</div>
-								<div class="nav-item dropdown" hx-trigger="load once" hx-get="/user" hx-swap="innerHTML">
-								</div>
+								<div class="nav-item dropdown" hx-trigger="load once" hx-get="/user" hx-swap="innerHTML"></div>
 						</div>
 				</div>
 		</header>
