feat: update and delete monitors, add is_active field to monitor

--- a/views/project.html
+++ b/views/project.html
@@ -10,7 +10,6 @@
 <html lang="en">
 		{{ template "base" }}
 		<body >
-				<script src="./dist/js/demo-theme.min.js?1692870487"></script>
 				<div class="page">
 						<!-- Navbar -->
 						<header class="navbar navbar-expand-md d-print-none" >
@@ -2892,8 +2891,8 @@
 				</div>
 				<!-- Libs JS -->
 				<!-- Tabler Core -->
-				<script src="./dist/js/tabler.min.js?1692870487" defer></script>
-				<script src="./dist/js/demo.min.js?1692870487" defer></script>
+				<script src="/static/js/tabler.min.js?1692870487" defer></script>
+				<script src="/static/js/demo.min.js?1692870487" defer></script>
 		</body>
 </html>
 
