--- a/views/base.html
+++ b/views/base.html
@@ -1,4 +1,5 @@
 {{ block "base" . }}
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="/static/css/tabler.min.css?1692870487" rel="stylesheet"/>
 <link href="/static/css/tabler-flags.min.css?1692870487" rel="stylesheet"/>
 <link href="/static/css/tabler-payments.min.css?1692870487" rel="stylesheet"/>
@@ -147,10 +148,5 @@ font-feature-settings: "cv03", "cv04", "cv11";
 		<script src="/static/js/demo-theme.min.js?1692870487"></script>
 		<script src="/static/js/tabler.min.js?1692870487" defer></script>
 		<script src="/static/js/demo.min.js?1692870487" defer></script>
-		<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-		<script>
-				var relativeTime = require("dayjs/plugin/relativeTime");
-				dayjs.extend(relativeTime);
-		</script>
 </body>
 {{ end }}
