--- a/views/errors.html
+++ b/views/errors.html
@@ -1,7 +1,23 @@
 {{ define "errors" }}
 <div id="error-container">
-		{{ if .Message }}
-		<div class="alert alert-success alert-dismissible" role="alert">
+{{ if .Message }}
+<style>
+#error-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    padding: 1rem;
+    max-width: 300px; /* Added to limit width */
+}
+
+.alert {
+    width: 100%;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Added for better visibility */
+}
+</style>
+
+		<div class="alert col-md-6 alert-important alert-success alert-dismissible" role="alert">
 				<div class="d-flex">
 						<div>
 								<!-- Download SVG icon from http://tabler-icons.io/i/check -->
@@ -13,21 +29,6 @@
 				</div>
 				<a class="btn-close" data-bs-dismiss="alert" aria-label="close"></a>
 		</div>
-		{{ end }}
-
-		{{ if .Error }}
-		<div class="alert alert-warning alert-dismissible alert-container" role="alert">
-				<div class="d-flex">
-						<div>
-								<!-- Download SVG icon from http://tabler-icons.io/i/alert-triangle -->
-								<svg xmlns="http://www.w3.org/2000/svg" class="icon alert-icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.24 3.957l-8.422 14.06a1.989 1.989 0 0 0 1.7 2.983h16.845a1.989 1.989 0 0 0 1.7 -2.983l-8.423 -14.06a1.989 1.989 0 0 0 -3.4 0z" /><path d="M12 9v4" /><path d="M12 17h.01" /></svg>
-						</div>
-						<div>
-								{{ .Error }}
-						</div>
-				</div>
-				<a class="btn-close" data-bs-dismiss="alert" aria-label="close"></a>
-		</div>
-		{{ end }}
+{{ end }}
 </div>
 {{ end }}
