--- a/views/forgot-password.html
+++ b/views/forgot-password.html
@@ -9,51 +9,76 @@
 -->
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Forgot password - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
-		{{ template "base" }}
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>
+      Forgot password - Tabler - Premium and Open Source dashboard template with
+      responsive and high quality UI.
+    </title>
+    {{ template "base" }}
   </head>
-  <body  class=" d-flex flex-column">
+  <body class="d-flex flex-column">
     <script src="/static/js/demo-theme.min.js?1692870487"></script>
     <div class="page page-center">
       <div class="container container-tight py-4">
         <div class="text-center mb-4">
           <a href="." class="navbar-brand navbar-brand-autodark">
-            <img src="/static/img/logo.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
+            <img
+              src="/static/img/logo.svg"
+              width="110"
+              height="32"
+              alt="Tabler"
+              class="navbar-brand-image"
+            />
           </a>
         </div>
-				{{ block "errors" . }}
-				<div id="error-container">
-						{{ if .Error }}
-						<div class="alert alert-warning alert-dismissible alert-container" role="alert">
-								<div class="d-flex">
-										<div>
-												<!-- Download SVG icon from http://tabler-icons.io/i/alert-triangle -->
-												<svg xmlns="http://www.w3.org/2000/svg" class="icon alert-icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.24 3.957l-8.422 14.06a1.989 1.989 0 0 0 1.7 2.983h16.845a1.989 1.989 0 0 0 1.7 -2.983l-8.423 -14.06a1.989 1.989 0 0 0 -3.4 0z" /><path d="M12 9v4" /><path d="M12 17h.01" /></svg>
-										</div>
-										<div>
-												{{ .Error }}
-										</div>
-								</div>
-								<a class="btn-close" data-bs-dismiss="alert" aria-label="close"></a>
-						</div>
-						{{ end }}
-				</div>
-				{{ end }}
-        <form class="card card-md" hx-post="/api/auth/forgot-password" hx-target="body" autocomplete="off">
+        {{ template "errors" .}}
+        <form
+          class="card card-md"
+          hx-post="/api/auth/forgot-password"
+          hx-target="body"
+          autocomplete="off"
+        >
           <div class="card-body">
             <h2 class="card-title text-center mb-4">Forgot password</h2>
-            <p class="text-secondary mb-4">Enter your email address and your password will be reset and emailed to you.</p>
+            <p class="text-secondary mb-4">
+              Enter your email address and your password will be reset and
+              emailed to you.
+            </p>
             <div class="mb-3">
               <label class="form-label">Email address</label>
-              <input name="email" type="email" class="form-control" placeholder="Enter email">
+              <input
+                name="email"
+                type="email"
+                class="form-control"
+                placeholder="Enter email"
+              />
             </div>
             <div class="form-footer">
               <button type="submit" class="btn btn-primary w-100">
                 <!-- Download SVG icon from http://tabler-icons.io/i/mail -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" /><path d="M3 7l9 6l9 -6" /></svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icon"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  stroke-width="2"
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path
+                    d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"
+                  />
+                  <path d="M3 7l9 6l9 -6" />
+                </svg>
                 Send me new password
               </button>
             </div>
@@ -70,4 +95,3 @@
     <script src="/static/js/demo.min.js?1692870487" defer></script>
   </body>
 </html>
-
