--- a/views/monitor.html
+++ b/views/monitor.html
@@ -1,16 +1,97 @@
 <!doctype html>
 <!--
-* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
-* @version 1.0.0-beta20
-* @link https://tabler.io
-* Copyright 2018-2023 The Tabler Authors
-* Copyright 2018-2023 codecalm.net Paweł Kuna
-* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
+		* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
+		* @version 1.0.0-beta20
+		* @link https://tabler.io
+		* Copyright 2018-2023 The Tabler Authors
+		* Copyright 2018-2023 codecalm.net Paweł Kuna
+		* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
 -->
 <html lang="en">
+		{{ template "errors"}}
 		{{ template "base" }}
 		<body >
-				<script src="./dist/js/demo-theme.min.js?1692870487"></script>
+    <div class="modal modal-blur fade" id="modal-danger" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <div class="modal-status bg-danger"></div>
+          <div class="modal-body text-center py-4">
+            <!-- Download SVG icon from http://tabler-icons.io/i/alert-triangle -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-danger icon-lg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.24 3.957l-8.422 14.06a1.989 1.989 0 0 0 1.7 2.983h16.845a1.989 1.989 0 0 0 1.7 -2.983l-8.423 -14.06a1.989 1.989 0 0 0 -3.4 0z" /><path d="M12 9v4" /><path d="M12 17h.01" /></svg>
+            <h3>Are you sure?</h3>
+            <div class="text-secondary">This operation cannot be undone.</div>
+          </div>
+          <div class="modal-footer">
+            <div class="w-100">
+              <div class="row">
+                <div class="col"><a href="#" class="btn w-100" data-bs-dismiss="modal">
+                    Cancel
+                  </a></div>
+									<div class="col"><a hx-delete="/api/monitor/{{.Monitor.ID}}" class="btn btn-danger w-100" data-bs-dismiss="modal">
+                    Delete monitor
+                  </a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+		<form class="modal modal-blur fade" id="modal-report" tabindex="-1" role="dialog" hx-swap="beforeend" hx-put="/api/monitor/{{.Monitor.ID}}" hx-target="body" aria-hidden="true">
+						<!-- <input type="text" name="monitor_id" value={{.Monitor.ID}} hidden> -->
+						<div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+								<div class="modal-content">
+										<div class="modal-header">
+												<h5 class="modal-title">Update monitor</h5>
+												<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+										</div>
+										<div class="modal-body">
+												<div class="mb-3">
+														<label class="form-label">Name</label>
+														<input type="text" name="name" class="form-control" name="example-text-input" placeholder="Your monitor name" value={{.Monitor.Name}}>
+												</div>
+												<div class="row">
+														<div class="col-lg-8">
+																<div class="mb-3">
+																		<label class="form-label">Period</label>
+																		<div class="input-group input-group-flat">
+																				<input type="number" name="period" class="form-control ps-0" autocomplete="off" placeholder="Minutes" value={{.Monitor.Period}} >
+																		</div>
+																</div>
+																<div class="mb-3">
+																		<label class="form-label">Grace period</label>
+																		<div class="input-group input-group-flat">
+																				<input type="number" name="grace_period" class="form-control ps-0" autocomplete="off" placeholder="Minutes" value={{.Monitor.GracePeriod}}>
+																		</div>
+																</div>
+														</div>
+														<div class="col-lg-4">
+																<div class="mb-3">
+																		<label class="form-label">Visibility</label>
+																		<select class="form-select">
+																				<option value="private">Private</option>
+																				<option value="public" selected>Public</option>
+																		</select>
+																</div>
+														</div>
+												</div>
+										</div>
+										<div class="modal-footer">
+												<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal">
+														Cancel
+												</a>
+												<button type="submit" class="btn btn-primary" data-bs-dismiss="modal">
+														<!-- Download SVG icon from http://tabler-icons.io/i/plus -->
+														<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-edit"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" /><path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" /><path d="M16 5l3 3" /></svg>
+														Update monitor
+												</button>
+										</div>
+								</div>
+						</div>
+				</form>
+
 				<div class="page">
 						<div class="page-wrapper">
 								<!-- Page body -->
@@ -19,7 +100,7 @@
 												<div class="row row-cards">
 														<div class="row g-3 align-items-center">
 																<div class="col-auto">
-																		
+
 																		{{ if eq .Monitor.Status "up" }}
 																		<span class="status-indicator status-green status-indicator-animated">
 																				<span class="status-indicator-circle"></span>
@@ -55,9 +136,7 @@
 																</div>
 																<div class="col-md-auto ms-auto d-print-none">
 																		<div class="btn-list">
-																				<a href="#" class="btn">
-																						<!-- Download SVG icon from http://tabler-icons.io/i/settings -->
-																						<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" /><path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /></svg>
+																				<a href="#" class="btn" data-bs-toggle="modal" data-bs-target="#modal-report">
 																						Configure
 																				</a>
 																				<a href="#" class="btn btn-primary">
@@ -65,6 +144,11 @@
 																						<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 5m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v12a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" /><path d="M14 5m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v12a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" /></svg>
 																						Pause this monitor
 																				</a>
+																				<a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modal-danger">
+																						<svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-trash-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 7h16" /><path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" /><path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" /><path d="M10 12l4 4m0 -4l-4 4" /></svg>
+																						Delete this monitor
+																				</a>
+
 																		</div>
 																</div>
 														</div>
@@ -281,7 +365,7 @@
 				</div>
 				<!-- Libs JS -->
 				<!-- Tabler Core -->
-				<script src="./dist/js/tabler.min.js?1692870487" defer></script>
-				<script src="./dist/js/demo.min.js?1692870487" defer></script>
+				<script src="/static/js/tabler.min.js?1692870487" defer></script>
+				<script src="/static/js/demo.min.js?1692870487" defer></script>
 		</body>
 </html>
