--- a/views/signup-success.html
+++ b/views/signup-success.html
@@ -24,8 +24,8 @@
         </div>
       </div>
     </div>
-    <script src="./dist/js/tabler.min.js?1692870487" defer></script>
-    <script src="./dist/js/demo.min.js?1692870487" defer></script>
+    <script src="/static/js/tabler.min.js?1692870487" defer></script>
+    <script src="/static/js/demo.min.js?1692870487" defer></script>
   </body>
 {{ end }}
 {{ end }}
